[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Start_menu.gd" type="Script" id=1]

[node name="Start_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.5
margin_top = -68.0
margin_right = 31.5

[node name="Start_button" type="Button" parent="VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../Quit_button")
text = "Start"

[node name="Options_button" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Options"

[node name="Quit_button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../Start_button")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start_button" to="." method="_on_Start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options_button" to="." method="_on_Options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_button" to="." method="_on_Quit_button_pressed"]
